Fixed left alignment in login form text entry fields.

--- a/styles/zestyio-atom-plugin.less
+++ b/styles/zestyio-atom-plugin.less
@@ -209,7 +209,7 @@
 	}
 }
 
-.zestyLogin{
+.zestyLogin {
 	height: 490x;
 	width: 100%;
 	padding: 10px;
@@ -244,6 +244,10 @@
 	.hidden {
 		display: none;
 	}
+}
+
+.zestyLoginEditorArea {
+	text-align: left;
 }
 
 .zestyWelcome{
